# cources_scheduler

./: README.md  pyproject.toml
notebooks/: 001_explore_situations.ipynb
src/courses_scheduler/: combinations.py  objects.py  optimization.py  planning.py
tests/: test_combinations.py  test_planning.py
