[project]
name = "courses_scheduler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ilia Maystrenko", email = "ilia-may@ya.ru"},
]
dependencies = [
    "ruff>=0.6.6",
    "pydantic>=2.9.2",
    "gekko>=1.2.1",
    "pytest>=8.3.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.1.1",
]
